plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.dervarex.minified.launch'

description = 'Launch/runtime utilities'

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        url = 'https://repo.opencollab.dev/main/'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
dependencies {
    implementation project(":minified-java")
    implementation project(":minified-auth")
    implementation project(":minified-utils")
    implementation project(":minified-events")
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    implementation 'org.jsoup:jsoup:1.21.1'
    implementation 'org.projectlombok:lombok:1.18.42'

    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    compileOnly 'org.jetbrains:annotations:24.1.0'
    compileOnly 'org.projectlombok:lombok:1.18.42'

    implementation 'com.google.code.gson:gson:2.14.0'
}

test {
    useJUnitPlatform {
        excludeTags("manual")
    }

    failOnNoDiscoveredTests = false
}

tasks.register("manualTest", Test) {
    useJUnitPlatform {
        includeTags("manual")
    }

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
}